#---------------------------------------------------------------------------
#CMake minimum required version
cmake_minimum_required (VERSION 2.8)
#---------------------------------------------------------------------------
#look up dir's file, and add to var
#aux_source_directory(<dir> <variable>)
#---------------------------------------------------------------------------
#generate static library
#add_library(libname ${<dir>})
#---------------------------------------------------------------------------
#install target 
#add_subdirectory(tools)
#---------------------------------------------------------------------------
